# polyfit2d

./: CMakeLists.txt  README.md
include/polyfit2d/: polyfit2d.hpp
src/: polyfit2d.cpp
tests/: main.cpp
